--- a/index.html
+++ b/index.html
@@ -148,9 +148,11 @@
                         Teaching financial literacy and entrepreneurship to students through sustainable, hands-on learning experiences
                     </p>
                     <div class="flex flex-col sm:flex-row gap-4">
-                        <button  onclick="window.location.href='C:\Users\win10\Desktop\coding\notepad\ecosmartlearning'" class="eco-gradient px-8 py-4 rounded-full font-semibold text-white hover:scale-105 transition-transform pulse-glow">
+                        <a href="https://cyberastic2207.github.io/smarteco/" target="_blank">
+                        <button class="eco-gradient px-8 py-4 rounded-full font-semibold text-white hover:scale-105 transition-transform pulse-glow">
                             🚀 Start Learning
                         </button>
+                        </a>
                         <button class="border-2 border-white px-8 py-4 rounded-full font-semibold hover:bg-white hover:text-purple-600 transition-colors">
                             📖 View Kit Contents
                         </button>
